--- a/srs-320/main.tex
+++ b/srs-320/main.tex
@@ -1068,17 +1068,53 @@ Software currently supports Android OS. It can support other operating systems i
 
 \clearpage\section[APPENDIX A. \ Example Screens]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 APPENDIX A. \ Example Screens}
-
-\bigskip
-
 {\selectlanguage{english}\itshape\color{black}
-Include copies of specifications, mockups, prototypes, etc. supplied or
-derived from the customer. 
+Restaurant Inspection form. 
 }
+\begin{figure}[H]
+\centering
+\renewcommand{\figurename}{InspectionMockup}
+\includegraphics[width=4in,height=6in]{mockup1.png}
+\end{figure}
 
-{\selectlanguage{english}\color{black}
-\foreignlanguage{english}{\ }\foreignlanguage{english}{[ insert appendix
-A here ]}}
+\newpage
+{\selectlanguage{english}\itshape\color{black}
+Initial log in page. 
+}
+\begin{figure}[H]
+\centering
+\renewcommand{\figurename}{Login}
+\includegraphics[width=4in,height=6in]{mockup2.png}
+\end{figure}
 
-\bigskip
+\newpage
+{\selectlanguage{english}\itshape\color{black}
+Simple search. 
+}
+\begin{figure}[H]
+\centering
+\renewcommand{\figurename}{SearchSimple}
+\includegraphics[width=4in,height=6in]{search_mockup.png}
+\end{figure}
+
+\newpage
+{\selectlanguage{english}\itshape\color{black}
+Report look-up selection. 
+}
+\begin{figure}[H]
+\centering
+\renewcommand{\figurename}{Report_Lookup}
+\includegraphics[width=4in,height=6in]{select_report_mockup.png}
+\end{figure}
+
+\newpage
+{\selectlanguage{english}\itshape\color{black}
+Delayed upload screen. 
+}
+\begin{figure}[H]
+\centering
+\renewcommand{\figurename}{Delayed_upload}
+\includegraphics[width=4in,height=6in]{delayed_upload_mockup.png}
+\end{figure}
+
 \end{document}
