New example screens posted

--- a/srs-320/main.tex
+++ b/srs-320/main.tex
@@ -1117,4 +1117,14 @@ Delayed upload screen.
 \includegraphics[width=4in,height=6in]{delayed_upload_mockup.png}
 \end{figure}
 
+\newpage
+{\selectlanguage{english}\itshape\color{black}
+Batch upload screen. 
+}
+\begin{figure}[H]
+\centering
+\renewcommand{\figurename}{Batch_upload}
+\includegraphics[width=4in,height=6in]{batch_upload_mockup.png}
+\end{figure}
+
 \end{document}
