UFL format used

--- a/sdd-320/main.tex
+++ b/sdd-320/main.tex
@@ -13,7 +13,7 @@
 \usepackage{hhline}
 \usepackage{hyperref}
 \usepackage{float}
-\hypersetup{pdftex, colorlinks=true, linkcolor=blue, citecolor=blue, filecolor=blue, urlcolor=blue, pdftitle=SOFTWARE REQUIREMENTS SPECIFICATION (SRS), pdfauthor=Shaylyn Adams}
+\hypersetup{pdftex, colorlinks=true, linkcolor=blue, citecolor=blue, filecolor=blue, urlcolor=blue, pdftitle=SOFTWARE DESIGN DOCUMENT (SRS), pdfauthor=Shaylyn Adams}
 \usepackage[pdftex]{graphicx}
 % Outline numbering
 \setcounter{secnumdepth}{5}
@@ -207,41 +207,32 @@ Section\ \hfill  Page}
 \section[INTRODUCTION]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 INTRODUCTION}
 
-\subsection[PURPOSE]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-PURPOSE}
+\subsection[Goals and Objectives]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+GOALS AND OBJECTIVES}
 {\selectlanguage{english}\rmfamily\color{black}
-Introductuib to design document.
+Introduction to design document.
 }
 
+\subsubsection[Browsing and Search]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+Browsing and Search}
+{\selectlanguage{english}\rmfamily\color{black}
+Introduction to design document.
+}
+\subsubsection[Form Entry]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+Browsing and Search}
+{\selectlanguage{english}\rmfamily\color{black}
+Introduction to design document.
+}
+\subsubsection[Delayed Upload]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+Browsing and Search}
+{\selectlanguage{english}\rmfamily\color{black}
+Introduction to design document.
+}
 
-\subsection[DOCUMENT CONVENTIONS]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-DOCUMENT CONVENTIONS}
+\subsection[Project Overview and Scope]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+Project Overview and Scope}
 {\selectlanguage{english}\rmfamily\color{black}
 WRITE HERE}
-
-
-\subsection[PRODUCT SCOPE]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-SCOPE}
-{\selectlanguage{english}\rmfamily\color{black}
-This project contains multiple sub-projects and systems. 
-\\     \\
-Design Scope
-
-\subsection[OVERVIEW]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-OVERVIEW}
-{\selectlanguage{english}\rmfamily\color{black}
-    Overview of design doc}
-    
-\subsection[REFERENCE MATERIAL]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-REFERENCE MATERIAL}
-{\selectlanguage{english}\rmfamily\color{black}
-    Links to Ionic Reference and such}
-
-\subsection[DEFINITIONS, ACRONYMS, AND
-ABBREVIATIONS]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-DEFINITIONS, ACRONYMS, AND ABBREVIATIONS}
-{\selectlanguage{english}\rmfamily\color{black}
-The products name is Health.e standing for Health electronics as it is designed to digitize information on health inspections, well water and septic tanks.}
 \newline
 \begin{flushleft}
 \tablehead{}
@@ -294,15 +285,24 @@ Specification\\\hline
 % REFERENCES}
 % {\selectlanguage{english}\itshape\color{black}
 % WRITE HERE}
-
-
-\clearpage\section[SYSTEM OVERVIEW]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+\clearpage\section[CORE FEATURES]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 SYSTEM OVERVIEW}
 
-\subsection[System Overview]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-System Overview}
-Give a general description of the functionality, context and designof your project. Provideany
-background information if necessary.
+\clearpage\section[ADDITIONAL FEATURES]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+SYSTEM OVERVIEW}
+
+\subsection[Software Context]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+Software Context}
+{\selectlanguage{english}\rmfamily\color{black}
+WRITE HERE}
+\subsection[Major Constraints]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+Major Constraints}
+{\selectlanguage{english}\rmfamily\color{black}
+WRITE HERE}
+\subsection[Intended Audience and Reading Suggestions]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+Intended Audience and Reading Suggestions}
+{\selectlanguage{english}\rmfamily\color{black}
+WRITE HERE}
 
 \begin{figure}[H]
 \centering
@@ -312,76 +312,95 @@ background information if necessary.
 
 
 
-\clearpage\section[SYSTEM ARCHITECTURE]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-SYSTEM ARCHITECTURE}
-\subsection[Architectural Design]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-Architectural Design}
-{\selectlanguage{english}\rmfamily\color{black}
-Develop a modular program structure and explain the relationships between the modules to
-achieve the complete functionality of the system. This is a high level overview of how
-Software Design Document
-3
-responsibilities of the system we repartitioned and then assigned to subsystems. Identify each
-high level subsystem and the roles or responsibilities assigned to it. Describe how these
-subsystems collaboratewith each otherin ordertoachievethedesiredfunctionality. Dont go
-into too much detail about theindividual subsystems. The mainpurposeis to gain ageneral
-understanding of how andwhy thesystem was decomposed, and howthe individual parts
-worktogether. Provideadiagram showingthemajor subsystems anddatarepositories and
-their interconnections. Describethediagram if required.}
-
-\subsection[Decomposition Description]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-Decomposition Description}
-{\selectlanguage{english}\rmfamily\color{black}
-Provideadecomposition of thesubsystems in thearchitectural design. Supplement with text
-as needed. Youmay chooseto giveafunctional description or an object­orienteddescription. For a functional description, put top­level data flow diagram (DFD) and structural
-decomposition diagrams. For an OO description, put subsystem model, object diagrams, generalization hierarchy diagram(s) (if any), aggregation hierarchy diagram(s) (if any),
-interface specifications, andsequence diagrams here.}
-
-\subsection[Decomposition Description]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-Decomposition Description}
-{\selectlanguage{english}\rmfamily\color{black}
-Discuss the rationale for selecting the architecture described in 3.1 including critical issues
-and trade/offs that were considered. You may discuss other architectures that were
-considered, provided that you explain why you didnt choose them.
-}
-
 \clearpage\section[DATA DESIGN]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 DATA DESIGN}
-\subsection[Data Description]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-Data Description}
+\subsection[Internal Software Data Structure]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+Internal Software Data Structure}
 {\selectlanguage{english}\rmfamily\color{black}
-Explain howtheinformation domain of your system is transformedinto data structures. Describehowthemajor dataor system entities arestored, processedandorganized. List any
-databases or datastorage items.
+WRITE HERE}
+\subsection[Global Data Structure]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+Global Data Structure}
+{\selectlanguage{english}\rmfamily\color{black}
+WRITE HERE}
+\subsection[Temporary Data Structure]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+Temporary Data Structure}
+{\selectlanguage{english}\rmfamily\color{black}
+WRITE HERE}
+\subsection[Database Description]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+Database Description}
+{\selectlanguage{english}\rmfamily\color{black}
+WRITE HERE}
+
+\clearpage\section[ARCHITECTURAL AND COMPONENT-LEVEL DESIGN]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+ARCHITECTURAL AND COMPONENT-LEVEL DESIGN}
+\subsection[System Structure]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+System Structure}
+
+\subsubsection[Browsing and Search]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+Browsing and Search}
+{\selectlanguage{english}\rmfamily\color{black}
+Introduction to design document.
+}
+\subsubsection[Form Entry]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+Browsing and Search}
+{\selectlanguage{english}\rmfamily\color{black}
+Introduction to design document.
+}
+\subsubsection[Delayed Upload]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+Browsing and Search}
+{\selectlanguage{english}\rmfamily\color{black}
+Introduction to design document.
 }
 
-\subsection[Data Dictionary]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-Data Dictionary}
 {\selectlanguage{english}\rmfamily\color{black}
-Explain how the information domain of your system is transformedinto data structures. Describehowthemajor dataor system entities a restored, processed and organized. List any
-databases or dat astorage items.
+Write Here
 }
+\subsection[BEGIN DEFINING SUB CLASSES...]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+BEGIN DEFINING SUB CLASSES...}
+{\selectlanguage{english}\rmfamily\color{black}
+Write Here
+}
+
 
 
 %\clearpage\section[DATA MODELING]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 %DATA MODELING}
 
-\clearpage\section[COMPONENT DESIGN]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-COMPONENT DESIGN}
+\clearpage\section{User Interface Design}
+
+\subsection[Description of the User Interface]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+Description of the User Interface}
 {\selectlanguage{english}\rmfamily\color{black}
-In this section, we take acloserlookat what each component does in amoresystematicway. If
-SoftwareDesignDocument
-4
-yougaveafunctional description insection 3.2, provideasummary of your algorithm for each
-function listedin 3.2inprocedural description language (PDL) or pseudocode. If yougavean
-OOdescription, summarize each object memberfunction for all theobjects listedin 3.2inPDL
-or pseudocode. Describeany local datawhen necessary.
+Describethefunctionality of thesystem from the users perspective. Explain howtheuser
+will be able to use your system to complete all the expected features and the feedback
+information that will bedisplayedfor theuser.
 }
 
+\subsubsection[Browsing and Search]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+Browsing and Search}
+{\selectlanguage{english}\rmfamily\color{black}
+Introduction to design document.
+}
+\subsubsection[Form Entry]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+Browsing and Search}
+{\selectlanguage{english}\rmfamily\color{black}
+Introduction to design document.
+}
+\subsubsection[Delayed Upload]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+Browsing and Search}
+{\selectlanguage{english}\rmfamily\color{black}
+Introduction to design document.
+}
 
-\clearpage\section{Human Interface Design}
-
-\subsection[Overview of User Interface]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-Overview of User Interface}
+\subsection[For first time users]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+For first time users}
+{\selectlanguage{english}\rmfamily\color{black}
+Describethefunctionality of thesystem from the users perspective. Explain howtheuser
+will be able to use your system to complete all the expected features and the feedback
+information that will bedisplayedfor theuser.
+}
+\subsection[For returning users]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+For first time users}
 {\selectlanguage{english}\rmfamily\color{black}
 Describethefunctionality of thesystem from the users perspective. Explain howtheuser
 will be able to use your system to complete all the expected features and the feedback
@@ -399,6 +418,34 @@ Screen Objects and Actions}
 {\selectlanguage{english}\rmfamily\color{black}
 A discussion of screen objects andactions associatedwith thoseobjects.
 }
+
+\clearpage\section[Restrictions Limitations and Constraints ]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+Restrictions Limitations and Constraints}
+
+\clearpage\section[Testing Issues ]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+Testing Issues}
+
+\subsection[Testing cases and expected results]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+Testing cases and expected results}
+{\selectlanguage{english}\rmfamily\color{black}
+A discussion of screen objects andactions associatedwith thoseobjects.
+}
+\subsection[Performance Bounds]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+Performance Bounds}
+{\selectlanguage{english}\rmfamily\color{black}
+A discussion of screen objects andactions associatedwith thoseobjects.
+}
+\subsection[Critical Systems]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+Critical Systems}
+{\selectlanguage{english}\rmfamily\color{black}
+A discussion of screen objects andactions associatedwith thoseobjects.
+}
+\subsection[Testing Cases]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+Testing Cases}
+{\selectlanguage{english}\rmfamily\color{black}
+A discussion of screen objects andactions associatedwith thoseobjects.
+}
+
 \clearpage\section[APPENDIX A. ]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 APPENDIX A. \ Example Screens}
 
