Re-formatted some sections

--- a/sdd-320/main.tex
+++ b/sdd-320/main.tex
@@ -44,7 +44,7 @@
 \newcommand\ps@Standard{
   \renewcommand\@oddhead{\selectlanguage{english}\rmfamily\color{black} University of Massachusetts CICS \hfill \hfill Health-e}
   \renewcommand\@evenhead{\@oddhead}
-  \renewcommand\@oddfoot{\foreignlanguage{english}{\textcolor{black}{SRS Page }}\foreignlanguage{english}{\textcolor{black}{\thepage{}}}}
+  \renewcommand\@oddfoot{\foreignlanguage{english}{\textcolor{black}{SDD Page }}\foreignlanguage{english}{\textcolor{black}{\thepage{}}}}
   \renewcommand\@evenfoot{\@oddfoot}
   \renewcommand\thepage{\arabic{page}}
 }
@@ -233,83 +233,30 @@ Introduction to design document.
 Project Overview and Scope}
 {\selectlanguage{english}\rmfamily\color{black}
 WRITE HERE}
-\newline
-\begin{flushleft}
-\tablehead{}
-\begin{supertabular}{|m{1.3587599in}|m{5.00806in}|}
-\hline
-\centering \selectlanguage{english}\bfseries\color{black} Term or
-Acronym &
-\centering\arraybslash \selectlanguage{english}\bfseries\color{black}
-Definition\\\hline
-\selectlanguage{english}\color{black} Alpha test &
-\selectlanguage{english}\color{black} Limited release(s) to selected,
-outside testers\\\hline
-\selectlanguage{english}\color{black} Beta test &
-\selectlanguage{english}\color{black} Limited release(s) to cooperating
-customers wanting early access to developing systems\\\hline
-\selectlanguage{english}\color{black} Final test &
-\selectlanguage{english}\color{black} aka, Acceptance test, release of
-full functionality to customer for approval\\\hline
-\selectlanguage{english}\color{black} DFD &
-\selectlanguage{english}\color{black} Data Flow Diagram\\\hline
-\selectlanguage{english}\color{black} SDD &
-\selectlanguage{english}\color{black} Software Design Document, aka SDS,
-Software Design Specification\\\hline
-\selectlanguage{english}\color{black} SRS &
-\selectlanguage{english}\color{black} Software Requirements
-Specification\\\hline
-\selectlanguage{english}\color{black} SSRS &
-\selectlanguage{english}\color{black} System and Software Requirements
-Specification\\\hline
-~
- &
-~
-\\\hline
-~
- &
-~
-\\\hline
-~
- &
-~
-\\\hline
-~
- &
-~
-\\\hline
-\end{supertabular}
-\end{flushleft}
+
+\subsubsection{Core features}
+
+\subsubsection{Addtional features}
 
 % \subsection[REFERENCESS]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 % REFERENCES}
 % {\selectlanguage{english}\itshape\color{black}
 % WRITE HERE}
-\clearpage\section[CORE FEATURES]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-SYSTEM OVERVIEW}
-
-\clearpage\section[ADDITIONAL FEATURES]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-SYSTEM OVERVIEW}
 
 \subsection[Software Context]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 Software Context}
 {\selectlanguage{english}\rmfamily\color{black}
 WRITE HERE}
+
 \subsection[Major Constraints]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 Major Constraints}
 {\selectlanguage{english}\rmfamily\color{black}
 WRITE HERE}
+
 \subsection[Intended Audience and Reading Suggestions]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 Intended Audience and Reading Suggestions}
 {\selectlanguage{english}\rmfamily\color{black}
 WRITE HERE}
-
-\begin{figure}[H]
-\centering
-\includegraphics[width=4in,height=3in]{Diagram1.png}
-\end{figure}
-
-
 
 
 \clearpage\section[DATA DESIGN]{\selectlanguage{english}\rmfamily\bfseries\color{black}
@@ -362,18 +309,15 @@ Write Here
 }
 
 
-
-%\clearpage\section[DATA MODELING]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-%DATA MODELING}
-
-\clearpage\section{User Interface Design}
+\clearpage\section[USER INTERFACE DESIGN]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+[USER INTERFACE DESIGN}
 
 \subsection[Description of the User Interface]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 Description of the User Interface}
 {\selectlanguage{english}\rmfamily\color{black}
-Describethefunctionality of thesystem from the users perspective. Explain howtheuser
+Describe the functionality of the system from the users perspective. Explain how the user
 will be able to use your system to complete all the expected features and the feedback
-information that will bedisplayedfor theuser.
+information that will be displayed for the user.
 }
 
 \subsubsection[Browsing and Search]{\selectlanguage{english}\rmfamily\bfseries\color{black}
@@ -419,11 +363,11 @@ Screen Objects and Actions}
 A discussion of screen objects andactions associatedwith thoseobjects.
 }
 
-\clearpage\section[Restrictions Limitations and Constraints ]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-Restrictions Limitations and Constraints}
+\clearpage\section[RESTRICTIONS, LIMITATIONS, \& CONSTRAINTS]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+RESTRICTIONS, LIMITATIONS, \& CONSTRAINTS}
 
-\clearpage\section[Testing Issues ]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-Testing Issues}
+\clearpage\section[TESTING ISSUES ]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+TESTING ISSUES}
 
 \subsection[Testing cases and expected results]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 Testing cases and expected results}
